# did-besu

./: .env  docker-compose.yml
caliper-besu/: check-besu.js  package.json  run-benchmarks.sh  validate-setup.js
caliper-besu/benchmarks/: caliper-config.yaml  config.yaml
caliper-besu/tools/: deep-debugger.js  deployment-diagnostics.js  diagnose-abi-issues.js  enhanced-diagnostics.js  robust-diagnostics.js
caliper-ethereum/: .gitignore  check-besu.js  package-lock.json  package.json  run-benchmarks.sh
caliper-ethereum/benchmarks/: config.yaml  operation-base.js  registerDID.js  resolveDID.js  updateDID.js  verifyCredential.js
caliper-ethereum/caliper-benchmarks/: caliper-config.yaml
example-contracts/: indy-besu-demos.bash  package.json  performanceTest.js  pnpm-lock.yaml
example-contracts/contracts-bak/: DIDRegistry.sol  DidRegistryInterface.sol  DidTypes.sol  RoleControl.sol  SSI.sol
example-contracts/contracts-origin/: DidRegistry.sol
example-contracts/indybesu-examples/: DidTypesFinal.sol
example-contracts/scripts/: deploy-origin.js  deploy.js
example-contracts/test/: did_vc_test.txt  new_test.txt
examples/caliper/: package.json  run-benchmarks.sh
examples/early-contracts-dev/: hardhat.config.js  package.json  (+1 more)
indy-besu/examples/thesis-did/: .rustfmt.toml  Cargo.toml  README.md
indy-besu/examples/thesis-did/src/: ledger.rs  wallet.rs
network/: config.json
smart_contracts/: .gitignore  hardhat.config.js  hardhat.config.ts  package.json
smartcontract/: hardhat.config.js  package.json  performanceTest.bak  pnpm-lock.yaml
(+116 files in other folders)
